# polynomial

./: .clang-format  .gitignore  LICENSE  polynomial.cpp  polynomial.h
.hooks/: pre-commit
tests/: meson.build  test.cpp
